Explicitly stated javac path