@@ -8,14 +8,14 @@ SUBMISSION_CLASSPATH="$(find . -name '*.jar' | paste -s -d':')"
 TEST_CLASSPATH="/usr/src/app/bin/:/usr/src/app/junit-4.12.jar:/usr/src/app/hamcrest-core-1.3.jar:$(find $test_files/ -name '*.jar' | paste -s -d':'):$BIN_DIR:$(find . -name '*.jar' | paste -s -d':')"
 
 echo "Compiling submission"
-if ! javac -cp "$SUBMISSION_CLASSPATH" -d $BIN_DIR $(find . -name '*.java'); then
+if ! /usr/local/openjdk-11/bin/javac -cp "$SUBMISSION_CLASSPATH" -d $BIN_DIR $(find . -name '*.java'); then
   rm -rf $BIN_DIR
   echo "<p>Failed to compile your submission code.</p>" > $1
   exit 0
 fi
 
 echo "Compiling test cases against submission"
-if ! javac -cp "$TEST_CLASSPATH" -d $BIN_DIR $(find $test_files/ -name '*.java'); then
+if ! /usr/local/openjdk-11/bin/javac -cp "$TEST_CLASSPATH" -d $BIN_DIR $(find $test_files/ -name '*.java'); then
   rm -rf $BIN_DIR
   echo "<p>Failed to compile tests against your code. Have you followed all naming conventions and method signatures defined by the assignment?</p>" > $1
   exit 0
@@ -37,7 +37,7 @@ fi
 # Ensure we timeout after 1 minute
 # Note that a better alternative is for teachers to set the timeout option when adding the @Test annotation
 echo "Asked to use timeout of $timeout."
-timeout --signal=9 $timeout java -cp "$TEST_CLASSPATH" -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap uk.ac.kcl.inf.nexus.junit_grader.TestRunner $1 $MARK_FILE
+timeout --signal=9 $timeout /usr/local/openjdk-11/bin/java -cp "$TEST_CLASSPATH" -XX:+UnlockExperimentalVMOptions -XX:+UseContainerSupport uk.ac.kcl.inf.nexus.junit_grader.TestRunner $1 $MARK_FILE
 RETURN_CODE=$?
 echo "Test run resulted in return code $RETURN_CODE"
 if [ $RETURN_CODE -ne 0 ]; then
